Set google button height to prevent flicker

--- a/packages/react/src/SignInForm.css
+++ b/packages/react/src/SignInForm.css
@@ -21,6 +21,7 @@
 .medplum-signin-google-container {
   padding: 20px 0 10px 0;
   margin: 20px 0 10px 0;
+  height: 70px;
   text-align: center;
   display: flex;
   align-items: center;
